tests/baselines/reference/assignmentCompatWithStringIndexer.errors.txt
assignmentCompatWithStringIndexer.ts(15,1): error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived; }'.
  'string' index signatures are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
assignmentCompatWithStringIndexer.ts(19,1): error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived2; }'.
  'string' index signatures are incompatible.
    Type 'Base' is missing the following properties from type 'Derived2': baz, bar
assignmentCompatWithStringIndexer.ts(33,5): error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived; }'.
  'string' index signatures are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
assignmentCompatWithStringIndexer.ts(41,5): error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived2; }'.
  'string' index signatures are incompatible.
    Type 'Base' is missing the following properties from type 'Derived2': baz, bar
assignmentCompatWithStringIndexer.ts(46,9): error TS2322: Type '{ [x: string]: Derived; }' is not assignable to type 'A<T>'.
  'string' index signatures are incompatible.
    Type 'Derived' is not assignable to type 'T'.
      'Derived' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
assignmentCompatWithStringIndexer.ts(47,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived; }'.
  'string' index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived'.
      Property 'bar' is missing in type 'Base' but required in type 'Derived'.
assignmentCompatWithStringIndexer.ts(50,9): error TS2322: Type '{ [x: string]: Derived2; }' is not assignable to type 'A<T>'.
  'string' index signatures are incompatible.
    Type 'Derived2' is not assignable to type 'T'.
      'Derived2' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
assignmentCompatWithStringIndexer.ts(51,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived2; }'.
  'string' index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived2'.
      Type 'Base' is missing the following properties from type 'Derived2': baz, bar


==== assignmentCompatWithStringIndexer.ts (8 errors) ====
    // index signatures must be compatible in assignments
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: string]: Base;
    }
    
    var a: A;
    
    var b: { [x: string]: Derived; }
    a = b; // ok
    b = a; // error
    ~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived; }'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 assignmentCompatWithStringIndexer.ts:4:34: 'bar' is declared here.
    
    var b2: { [x: string]: Derived2; }
    a = b2; // ok
    b2 = a; // error
    ~~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: string]: Derived2; }'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Type 'Base' is missing the following properties from type 'Derived2': baz, bar
    
    module Generics {
        class A<T extends Base> {
            [x: string]: T;
        }
    
        class B extends A<Base> {
            [x: string]: Derived; // ok
        }
    
        var b1: { [x: string]: Derived; };
        var a1: A<Base>;
        a1 = b1; // ok
        b1 = a1; // error
        ~~
!!! error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived; }'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 assignmentCompatWithStringIndexer.ts:4:34: 'bar' is declared here.
    
        class B2 extends A<Base> {
            [x: string]: Derived2; // ok
        }
    
        var b2: { [x: string]: Derived2; };
        a1 = b2; // ok
        b2 = a1; // error
        ~~
!!! error TS2322: Type 'A<Base>' is not assignable to type '{ [x: string]: Derived2; }'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Type 'Base' is missing the following properties from type 'Derived2': baz, bar
    
        function foo<T extends Base>() {
            var b3: { [x: string]: Derived; };
            var a3: A<T>;
            a3 = b3; // error
            ~~
!!! error TS2322: Type '{ [x: string]: Derived; }' is not assignable to type 'A<T>'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Type 'Derived' is not assignable to type 'T'.
!!! error TS2322:       'Derived' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
            b3 = a3; // error
            ~~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived; }'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'Derived'.
!!! error TS2322:       Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 assignmentCompatWithStringIndexer.ts:4:34: 'bar' is declared here.
    
            var b4: { [x: string]: Derived2; };
            a3 = b4; // error
            ~~
!!! error TS2322: Type '{ [x: string]: Derived2; }' is not assignable to type 'A<T>'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Type 'Derived2' is not assignable to type 'T'.
!!! error TS2322:       'Derived2' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
            b4 = a3; // error
            ~~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: Derived2; }'.
!!! error TS2322:   'string' index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'Derived2'.
!!! error TS2322:       Type 'Base' is missing the following properties from type 'Derived2': baz, bar
        }
    }